--- a/TestAssignmentPeach.csproj
+++ b/TestAssignmentPeach.csproj
@@ -13,6 +13,7 @@
     <ProjectGuid>{C32DC0D8-4DE2-4419-BA7F-3253900ED7C9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <PublishChromeDriver>true</PublishChromeDriver>
     <RootNamespace>TestAssignmentPeach</RootNamespace>
     <AssemblyName>TestAssignmentPeach</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
