--- a/App.config
+++ b/App.config
@@ -1,10 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
 	<appSettings>
-		<add key="BrowserName" value="Chrome" />
-		<add key="BaseUrl" value="http://the-internet.herokuapp.com/" />
+		<add key="BrowserName" value="Chrome"/>
+		<add key="BaseUrl" value="http://the-internet.herokuapp.com/"/>
 	</appSettings>
 
-</configuration>
-
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
