--- a/packages.config
+++ b/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="BoDi" version="1.4.1" targetFramework="net45" />
   <package id="Cucumber.Messages" version="6.0.1" targetFramework="net45" />
-  <package id="FluentAssertions" version="5.9.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="5.9.0" targetFramework="net45" requireReinstallation="true" />
   <package id="Gherkin" version="6.0.0" targetFramework="net45" />
   <package id="Google.Protobuf" version="3.7.0" targetFramework="net45" />
   <package id="Microsoft.NET.Test.Sdk" version="15.0.0" targetFramework="net45" />
@@ -17,11 +17,11 @@
   <package id="SpecRun.Runner" version="3.1.37" targetFramework="net45" />
   <package id="SpecRun.SpecFlow" version="3.1.37" targetFramework="net45" />
   <package id="SpecRun.SpecFlow.3-1-0" version="3.1.37" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="net45" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net45" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net45" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
-  <package id="Utf8Json" version="1.3.7" targetFramework="net45" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="Utf8Json" version="1.3.7" targetFramework="net45" requireReinstallation="true" />
 </packages>
